add total memory bandwidth utilization for each channel

--- a/AMD_EPYC_Milan_PCIe_xGMI_MEM_BW_Monitor/0x19_0x01.conf
+++ b/AMD_EPYC_Milan_PCIe_xGMI_MEM_BW_Monitor/0x19_0x01.conf
@@ -46,25 +46,38 @@
         <metric name="Total Mem RdBw (GB/s)" expression="(64 * $TotalMemRdBw) / ($ElapsedTimeinUsMem * 1000)"> </metric>
         <metric name="Total Mem WrBw (GB/s)" expression="(64 * $TotalMemWrBw) / ($ElapsedTimeinUsMem * 1000)"> </metric>
 
-        <metric name="$Mem Ch-A RdBw (GB/s)" abbrev="MemChARdBw" expression="(64 * $DFCS0Umc0ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-A WrBw (GB/s)" abbrev="MemChAWrBw" expression="(64 * $DFCS0Umc0ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-B RdBw (GB/s)" abbrev="MemChBRdBw" expression="(64 * $DFCS1Umc1ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-B WrBw (GB/s)" abbrev="MemChBWrBw" expression="(64 * $DFCS1Umc1ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-A RdBw (GB/s)" abbrev="MemChARdBw" expression="(64 * $DFCS0Umc0ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-A WrBw (GB/s)" abbrev="MemChAWrBw" expression="(64 * $DFCS0Umc0ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-A Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS0Umc0ReqRd+$DFCS0Umc0ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
 
-        <metric name="$Mem Ch-C RdBw (GB/s)" abbrev="MemChCRdBw" expression="(64 * $DFCS3Umc3ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-C WrBw (GB/s)" abbrev="MemChCWrBw" expression="(64 * $DFCS3Umc3ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-D RdBw (GB/s)" abbrev="MemChDRdBw" expression="(64 * $DFCS2Umc2ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-D WrBw (GB/s)" abbrev="MemChDWrBw" expression="(64 * $DFCS2Umc2ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-B RdBw (GB/s)" abbrev="MemChBRdBw" expression="(64 * $DFCS1Umc1ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-B WrBw (GB/s)" abbrev="MemChBWrBw" expression="(64 * $DFCS1Umc1ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-B Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS1Umc1ReqRd+$DFCS1Umc1ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
 
-        <metric name="$Mem Ch-E RdBw (GB/s)" abbrev="MemChERdBw" expression="(64 * $DFCS6Umc6ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-E WrBw (GB/s)" abbrev="MemChEWrBw" expression="(64 * $DFCS6Umc6ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-F RdBw (GB/s)" abbrev="MemChFRdBw" expression="(64 * $DFCS7Umc7ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-F WrBw (GB/s)" abbrev="MemChFWrBw" expression="(64 * $DFCS7Umc7ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-C RdBw (GB/s)" abbrev="MemChCRdBw" expression="(64 * $DFCS3Umc3ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-C WrBw (GB/s)" abbrev="MemChCWrBw" expression="(64 * $DFCS3Umc3ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-C Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS3Umc3ReqRd+$DFCS3Umc3ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
 
-        <metric name="$Mem Ch-G RdBw (GB/s)" abbrev="MemChGRdBw" expression="(64 * $DFCS5Umc5ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-G WrBw (GB/s)" abbrev="MemChGWrBw" expression="(64 * $DFCS5Umc5ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-H RdBw (GB/s)" abbrev="MemChHRdBw" expression="(64 * $DFCS4Umc4ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
-        <metric name="$Mem Ch-H WrBw (GB/s)" abbrev="MemChHWrBw" expression="(64 * $DFCS4Umc4ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-D RdBw (GB/s)" abbrev="MemChDRdBw" expression="(64 * $DFCS2Umc2ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-D WrBw (GB/s)" abbrev="MemChDWrBw" expression="(64 * $DFCS2Umc2ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-D Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS2Umc2ReqRd+$DFCS2Umc2ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+
+        <metric name="Mem Ch-E RdBw (GB/s)" abbrev="MemChERdBw" expression="(64 * $DFCS6Umc6ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-E WrBw (GB/s)" abbrev="MemChEWrBw" expression="(64 * $DFCS6Umc6ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-E Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS6Umc6ReqRd+$DFCS6Umc6ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+
+        <metric name="Mem Ch-F RdBw (GB/s)" abbrev="MemChFRdBw" expression="(64 * $DFCS7Umc7ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-F WrBw (GB/s)" abbrev="MemChFWrBw" expression="(64 * $DFCS7Umc7ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-F Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS7Umc7ReqRd+$DFCS7Umc7ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+
+        <metric name="Mem Ch-G RdBw (GB/s)" abbrev="MemChGRdBw" expression="(64 * $DFCS5Umc5ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-G WrBw (GB/s)" abbrev="MemChGWrBw" expression="(64 * $DFCS5Umc5ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-G Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS5Umc5ReqRd+$DFCS5Umc5ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+
+        <metric name="Mem Ch-H RdBw (GB/s)" abbrev="MemChHRdBw" expression="(64 * $DFCS4Umc4ReqRd) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Mem Ch-H WrBw (GB/s)" abbrev="MemChHWrBw" expression="(64 * $DFCS4Umc4ReqWr) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+        <metric name="Total Mem Ch-H Bw (GB/s)" abbrev="TotMemChABw" expression="(64 * ($DFCS4Umc4ReqRd+$DFCS4Umc4ReqWr)) / ($ElapsedTimeinUsMem * 1000)" aggr="F"> </metric>
+
     </df>
 
     <df subtype="xgmi">
